- add `no-data-cell` ld selector for programmatically deciding colspan for `no-data-cell` to prevent layout issue  - explicitly set button cell size  - use css class for adder-field and add css to prevent content overflow and interaction

--- a/src/index.styl
+++ b/src/index.styl
@@ -2,3 +2,10 @@
   outline: 1px solid var(--danger)
 table
   table-layout: fixed
+  .adder-hidden
+    visibility: hidden
+    pointer-events: none
+    position: relative
+    overflow: hidden
+    & > div
+      position: absolute
